--- a/demoApplication/src/main/res/values/colors.xml
+++ b/demoApplication/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="darkBackground">#696969</color>
+    <color name="darkActionBar">#AC0000</color>
 </resources>
